--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[url('/bg.jpg')] bg-center bg-cover min-h-screen p-4">
+<body class="bg-[url('./bg.jpg')] bg-center bg-cover min-h-screen p-4">
   <h1 class="px-8 pb-4 text-center text-2xl font-black text-emerald-50">Workspace Claudio Jr</h1>
     <div class="container mx-auto">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
