--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css" />
+    <!-- Open Graph Tags para Facebook e LinkedIn -->
+    <meta property="og:title" content="Dashboard">
+    <meta property="og:description" content="Um painel de controle interativo com lista de tarefas, relógio e timer.">
+    <meta property="og:image" content="https://imgs.search.brave.com/fcS7aZeeL_TrN1frr-LOrt1Upo4UwTlBuL19qdQIZmQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9yZXMu/Y2xvdWRpbmFyeS5j/b20vaW5ieXRlcy9p/bWFnZS91cGxvYWQv/Y19maWxsLHFfYXV0/byx3XzYwMC9jX3Ro/dW1iLHdfNDAwL3Yx/NjE3MTQ4OTIzL2Rl/di9raW1iZXJyeXBp/L3dvcmtzcGFjZS9t/YWluLWltYWdlLTFf/eXJla2QyLnBuZw">
+    <meta property="og:url" content="https://claudio-asj.github.io/workspace/">
+    <meta property="og:type" content="website">
   </head>
 
   <body class="bg-[url('/bg.jpg')] bg-center bg-cover min-h-screen p-4">
