--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Open Graph Tags para Facebook e LinkedIn -->
     <meta property="og:title" content="Dashboard">
     <meta property="og:description" content="Um painel de controle interativo com lista de tarefas, relógio e timer.">
