--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
   </head>
 
-  <body class="bg-[url('/bg.jpg')] bg-center bg-cover min-h-screen p-4">
+  <body class="bg-[url('/./bg.jpg')] bg-center bg-cover min-h-screen p-4">
     <h1
       class="px-8 pb-4 text-center text-2xl font-black text-emerald-50"
       id="userNameDisplay"
