--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
   </head>
 
-  <body class="bg-[url('/./bg.jpg')] bg-center bg-cover min-h-screen p-4">
+  <body class="bg-[url('./bg.jpg')] bg-center bg-cover min-h-screen p-4">
     <h1
       class="px-8 pb-4 text-center text-2xl font-black text-emerald-50"
       id="userNameDisplay"
@@ -24,7 +24,7 @@
     <div class="container mx-auto">
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <!-- Todo List -->
-        <div class="bg-white/90 p-6 rounded-lg shadow-md">
+        <div class="bg-white/90 p-6 rounded-lg shadow-md h-fit">
           <h2 class="text-2xl font-bold mb-4">Todo List</h2>
           <div class="mb-4">
             <input
@@ -82,7 +82,7 @@
         </div>
 
         <!-- Notas -->
-        <div class="bg-white/90 p-6 rounded-lg shadow-md">
+        <div class="bg-white/90 p-6 rounded-lg shadow-md h-fit">
           <h2 class="text-2xl font-bold mb-4">Notas</h2>
           <div class="mb-4">
             <input
