iniciando o projeto vite vue

--- a/index.html
+++ b/index.html
@@ -1,174 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <!-- Open Graph Tags para Facebook e LinkedIn -->
-    <meta property="og:title" content="Dashboard" />
-    <meta
-      property="og:description"
-      content="Um painel de controle interativo com lista de tarefas, relógio e timer."
-    />
-    <meta
-      property="og:image"
-      content="https://imgs.search.brave.com/fcS7aZeeL_TrN1frr-LOrt1Upo4UwTlBuL19qdQIZmQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9yZXMu/Y2xvdWRpbmFyeS5j/b20vaW5ieXRlcy9p/bWFnZS91cGxvYWQv/Y19maWxsLHFfYXV0/byx3XzYwMC9jX3Ro/dW1iLHdfNDAwL3Yx/NjE3MTQ4OTIzL2Rl/di9raW1iZXJyeXBp/L3dvcmtzcGFjZS9t/YWluLWltYWdlLTFf/eXJla2QyLnBuZw"
-    />
-    <meta
-      property="og:url"
-      content="https://claudio-asj.github.io/workspace/"
-    />
-    <meta property="og:type" content="website" />
+    <title>Workspace</title>
   </head>
-
-  <body class="bg-[url('./bg.jpg')] bg-center bg-cover min-h-screen p-4">
-    <h1
-      class="px-8 pb-4 text-center text-2xl font-black text-emerald-50"
-      id="userNameDisplay"
-    ></h1>
-
-    <div class="container mx-auto">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <!-- Todo List -->
-        <div class="bg-white/90 p-6 rounded-lg shadow-md h-fit">
-          <h2 class="text-2xl font-bold mb-4">Todo List</h2>
-          <div class="mb-4">
-            <input
-              type="text"
-              id="todoInput"
-              placeholder="Nova tarefa..."
-              class="w-full p-2 border rounded-md"
-            />
-            <button
-              onclick="addTodo()"
-              class="mt-2 bg-blue-500 text-white px-4 py-2 rounded-md w-full hover:bg-blue-600"
-            >
-              Adicionar
-            </button>
-          </div>
-          <ul id="todoList" class="space-y-2"></ul>
-        </div>
-
-        <!-- Clock and Timer -->
-        <div class="space-y-4">
-          <div class="bg-white/90 p-6 rounded-lg shadow-md">
-            <h2 class="text-2xl font-bold mb-4">Relógio</h2>
-            <div class="text-center">
-              <div id="date" class="text-xl mb-2"></div>
-              <div id="clock" class="text-4xl font-mono"></div>
-            </div>
-          </div>
-
-          <div class="bg-white/90 p-6 rounded-lg shadow-md">
-            <h2 class="text-2xl font-bold mb-4">Timer</h2>
-            <div class="text-center">
-              <div id="timer" class="text-4xl font-mono mb-4">00:00:00</div>
-              <div class="space-x-2">
-                <button
-                  onclick="startTimer()"
-                  class="bg-green-500 text-white px-4 py-2 rounded-md hover:bg-green-600"
-                >
-                  Iniciar
-                </button>
-                <button
-                  onclick="pauseTimer()"
-                  class="bg-yellow-500 text-white px-4 py-2 rounded-md hover:bg-yellow-600"
-                >
-                  Pausar
-                </button>
-                <button
-                  onclick="resetTimer()"
-                  class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600"
-                >
-                  Reset
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Notas -->
-        <div class="bg-white/90 p-6 rounded-lg shadow-md h-fit">
-          <h2 class="text-2xl font-bold mb-4">Notas</h2>
-          <div class="mb-4">
-            <input
-              type="text"
-              id="noteTitle"
-              placeholder="Título da nota..."
-              class="w-full p-2 border rounded-md mb-2"
-            />
-            <textarea
-              id="noteContent"
-              placeholder="Conteúdo da nota..."
-              class="w-full p-2 border rounded-md mb-2 h-24"
-            ></textarea>
-
-            <!-- Seletor de cor com algumas cores predefinidas -->
-            <select id="noteColor" class="w-full mb-2 p-2 border rounded-md">
-              <option value="#ffffff">Branco</option>
-              <option value="#ffcccc">Vermelho Claro</option>
-              <option value="#ccffcc">Verde Claro</option>
-              <option value="#ccccff">Azul Claro</option>
-              <option value="#ffff99">Amarelo Claro</option>
-              <option value="#f5f5f5">Cinza Claro</option>
-            </select>
-
-            <button
-              onclick="addNote()"
-              class="bg-blue-500 text-white px-4 py-2 rounded-md w-full hover:bg-blue-600"
-            >
-              Adicionar Nota
-            </button>
-          </div>
-          <div id="notesList" class="space-y-3"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Diálogo de Nome -->
-    <div
-      id="nameDialog"
-      class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden"
-    >
-      <div class="bg-white p-6 rounded-lg shadow-lg">
-        <h2 class="text-xl font-bold mb-4">Digite seu nome</h2>
-        <input
-          type="text"
-          id="userNameInput"
-          class="border p-2 rounded-md w-full mb-4"
-        />
-        <button
-          onclick="saveUserName()"
-          class="bg-blue-500 text-white px-4 py-2 rounded-md w-full hover:bg-blue-600"
-        >
-          Salvar
-        </button>
-      </div>
-    </div>
-
-    <div id="toastContainer" class="fixed bottom-4 right-4 space-y-2"></div>
-
-    <footer class="fixed pb-2 w-full bottom-0">
-      <div
-        class="text-center py-4 px-8 rounded-lg bg-zinc-100 w-fit mx-auto text-xs relative"
-      >
-        Desenvolvido com ❤️ por
-        <a
-          class="font-mono ml-1 font-semibold underline"
-          href="https://github.com/Claudio-asj"
-          target="_blank"
-          >ClaudioJr
-        </a>
-
-        <button onclick="CloseFooter()" class="absolute top-2 right-4">
-          X
-        </button>
-      </div>
-    </footer>
-
-    <script src="script.js"></script>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
