--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Claudio Junior" />
+    <meta name="description" content="Um espaço digital eficiente e produtivo para desenvolvedores." />
+    <meta name="keywords" content="workspace, desenvolvimento, produtividade, tecnologia" />
+    <meta name="robots" content="index, follow" />
+    
+    <meta property="og:title" content="Workspace" />
+    <meta property="og:description" content="Um espaço digital eficiente e produtivo para desenvolvedores." />
+    <meta property="og:image" content="/metatag.png" />
+    <meta property="og:url" content="https://workspace-cld.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Workspace" />
+    <meta name="twitter:description" content="Um espaço digital eficiente e produtivo para desenvolvedores." />
+    <meta name="twitter:image" content="/metatag.png" />
+
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Workspace</title>
